--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Impala2go: A standalone distribution of Impala, optimized to work with cloud storage, bypassing HDFS completely.">
+    <meta name="description" content="Impala2go : A standalone distribution of Impala, optimized to work with cloud storage, bypassing HDFS completely.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,15 +16,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ImpalaToGo/ImpalaToGo">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/ImpalaToGo">View on GitHub</a>
 
           <h1 id="project_title">Impala2go</h1>
           <h2 id="project_tagline">A standalone distribution of Impala, optimized to work with cloud storage, bypassing HDFS completely.</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ImpalaToGo/ImpalaToGo/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ImpalaToGo/ImpalaToGo/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
@@ -318,7 +314,7 @@ bin/hive --service metastore</pre></div>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Impala2go maintained by <a href="https://github.com/ImpalaToGo">ImpalaToGo</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
