--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ImpalaToGo">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/ImpalaToGo/ImpalaToGo">View on GitHub</a>
 
           <h1 id="project_title">Impala2go</h1>
           <h2 id="project_tagline">A standalone distribution of Impala, optimized to work with cloud storage, bypassing HDFS completely.</h2>
 
+            <section id="downloads">
+	      <a class="how_to_link" href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/How-to-try">How To Try</a>
+<!--
+              <a class="zip_download_link" href="https://github.com/ImpalaToGo/ImpalaToGo/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ImpalaToGo/ImpalaToGo/tarball/master">Download this project as a tar.gz file</a>
+-->
+            </section>
         </header>
     </div>
 
@@ -48,7 +55,13 @@
 <li>ImpalaToGo has a lot of ideas so far to make impala usage simple!</li>
 </ol>
 </blockquote>
+<h2>
 
+<a id="how-to-try" class="anchor"href="#how-to-try" aria-hidden="true">
+<span class="octicon octicon-link"></span></a>How To Try
+</h2>
+<div > It's easy! Just follow instructions on <a href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/How-to-try"> Wiki</a>
+</div>
 <h2>
 <a id="development-environment-prerequisites-ubuntu" class="anchor" href="#development-environment-prerequisites-ubuntu" aria-hidden="true"><span class="octicon octicon-link"></span></a>Development environment prerequisites (Ubuntu)</h2>
 
@@ -314,6 +327,7 @@ bin/hive --service metastore</pre></div>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+        <p class="copyright">Impala2go maintained by <a href="https://github.com/ImpalaToGo">ImpalaToGo</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
