Add a word about optimization for a cloud

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 <blockquote>
 <ol>
 <li>It is Impala without hadoop. You can take advantage of its fast query engine without managing whole hadoop stack.</li>
-<li>Optimized work with S3. ImpalaToGo transparently cache data on local drives.</li>
-<li>Actually only open source MPP database written in C++</li>
+<li>Optimized to work with S3. ImpalaToGo transparently cache data on local drives of cluster nodes.</li>
+<li>Optimized to work in cloud. ImpalaToGo has simple interface to start cluster in cloud.</li>
+<li>Actually the only open source MPP database written in C++</li>
 <li>It gives you almost the same capabilities as Hive over S3, but much faster.</li>
 </ol>
 </blockquote>
