Add links to presentations

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 <p>We have developed a caching layer which uses local drives to provide cache access for remote storage. Its advantages can easily be seen when working with S3.</p>
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
+<h3>Presentations</h3>
+<p><a href="http://www.slideshare.net/DavidGroozman/impala-togo-usecase">ImpalaToGo Use Case</a><br/>
+<a href="http://www.slideshare.net/DavidGroozman/impalatogo-design-explained">ImpalaToGo Introduction</a><br/>
+<a href="http://www.slideshare.net/DavidGroozman/impala-togo-introduction">ImpalaToGo Introduction</a></p>
+
 <p><a href="http://www.apache.org/licenses/LICENSE-2.0.htm">Apache License</a></p>
 
 <h4>
