Minor changes in layout
- Make How-to try a section
- make License section less significant
- change copyright text

--- a/index.html
+++ b/index.html
@@ -42,18 +42,19 @@
 <li>It gives you almost the same capabilities as Hive over S3, but is much faster.</li>
 </ol>
 </blockquote>
-<p>How to try: <a href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/Quick-Start">Quick Start</a></p>
-<p>Short presentation on ImpalaToGo architecture: <a href="http://www.slideshare.net/DavidGroozman/impala-togo-introduction">ImpalaToGo Introduction</a></p>
 <h3>
 <a id="what-we-add-to-cloudera-impala" class="anchor" href="#what-we-add-to-cloudera-impala" aria-hidden="true"><span class="octicon octicon-link"></span></a>What have we added to Cloudera Impala?</h3>
 <p>We have developed a caching layer which uses local drives to provide cache access for remote storage. Its advantages can easily be seen when working with S3.</p>
-<h2>
-<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
+
+<h3>How To Try</h3
+<p>It's easy. Just follow the instruction in <a href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/Quick-Start">Quick Start</a> guide</p>
 <h3>Presentations</h3>
 <p><a href="http://www.slideshare.net/DavidGroozman/impala-togo-usecase">ImpalaToGo Use Case</a><br/>
 <a href="http://www.slideshare.net/DavidGroozman/impalatogo-design-explained">ImpalaToGo Introduction</a><br/>
 <a href="http://www.slideshare.net/DavidGroozman/impala-togo-introduction">ImpalaToGo Introduction</a></p>
 
+<h3>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
 <p><a href="http://www.apache.org/licenses/LICENSE-2.0.htm">Apache License</a></p>
 
 <h4>
@@ -64,7 +65,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Impala2go maintained by <a href="https://github.com/ImpalaToGo">ImpalaToGo</a></p>
+        <p class="copyright">impala2go.info maintained by <a href="https://github.com/ImpalaToGo">ImpalaToGo</a> team</p>
       </footer>
     </div>
 
