Change wrong link name

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>It's easy. Just follow the instruction in <a href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/Quick-Start">Quick Start</a> guide</p>
 <h3>Presentations</h3>
 <p><a href="http://www.slideshare.net/DavidGroozman/impala-togo-usecase">ImpalaToGo Use Case</a><br/>
-<a href="http://www.slideshare.net/DavidGroozman/impalatogo-design-explained">ImpalaToGo Introduction</a><br/>
+<a href="http://www.slideshare.net/DavidGroozman/impalatogo-design-explained">ImpalaToGo design explained</a><br/>
 <a href="http://www.slideshare.net/DavidGroozman/impala-togo-introduction">ImpalaToGo Introduction</a></p>
 
 <h3>
