--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
 <h3>How To Try</h3
 <p>It's easy. Just follow the instruction in <a href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/Quick-Start">Quick Start</a> guide</p>
+<h3>Have problems?</h3>
+<p>We have a <a href="https://groups.google.com/forum/?fromgroups#!forum/impalatogo-users">Forum</a> where we'll be glad to answer any question.<br />
+If you found a bug or want suggest an improvement, don't hessitate <a href="https://github.com/ImpalaToGo/ImpalaToGo/issues/new">Create Issue</a>.</p>
+
 <h3>Presentations</h3>
 <p><a href="http://www.slideshare.net/DavidGroozman/impala-togo-usecase">ImpalaToGo Use Case</a><br/>
 <a href="http://www.slideshare.net/DavidGroozman/impalatogo-design-explained">ImpalaToGo design explained</a><br/>
