Add link to JSON support wiki page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <h3>
 <a id="what-we-add-to-cloudera-impala" class="anchor" href="#what-we-add-to-cloudera-impala" aria-hidden="true"><span class="octicon octicon-link"></span></a>What have we added to Cloudera Impala?</h3>
 <p>We have developed a caching layer which uses local drives to provide cache access for remote storage. Its advantages can easily be seen when working with S3.</p>
-
+<h3>JSON Support</h3>
+<p>Yes, we have it! The instruction <a href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/JSON-data-support----how-to">here</a></p>
 <h3>How To Try</h3
 <p>It's easy. Just follow the instruction in <a href="https://github.com/ImpalaToGo/ImpalaToGo/wiki/Quick-Start">Quick Start</a> guide</p>
 <h3>Have problems?</h3>
